--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ langchain_google_community
 langchain_tavily
 langchain_groq
 langchain_openai
+langchain-google-community[places]
 langgraph
 
 fastapi
